--- a/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/Scripts/App/UsersSection/Views/starshipstravel.html
+++ b/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/Scripts/App/UsersSection/Views/starshipstravel.html
@@ -1,12 +1,12 @@
 ﻿<div class="container">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12" ng-controller="UsersSection.Controllers.StarshipTravelController as starshiptravelCtrl">
             <div class="table-responsive" ng-init="starshiptravelCtrl.GetStarShips(1)">
                 <table summary="Starship travel & resupply count" class="table table-bordered table-hover">
                     <caption class="text-left">
                         <span class="planet-distance-caption">Starship Resupply Stop(s) Count</span>
                         <span class="pull-right">
-                            <input type="text" class="form-control-static planet-distance" ng-model="starshiptravelCtrl.planetDistance" placeholder="Enter Travel distance in MGLT" />
+                            <input type="number" ng-pattern="starshiptravelCtrl.onlyNumbers" class="form-control-static planet-distance" ng-model="starshiptravelCtrl.planetDistance" placeholder="Enter Travel distance in MGLT" />
                             <button class="btn btn-info" ng-click="starshiptravelCtrl.GetShipsSupplyCount()">Calculate</button>
                         </span>
                     </caption>
@@ -15,19 +15,22 @@
                             <th>Name</th>
                             <th>Crew</th>
                             <th>Consumables</th>
-                            <th>MGLT/ hr</th>
+                            <th>MGLT / hr</th>
                             <th>Stop(s) Required</th>
                             <th>Travel Distance MGLT</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr ng-repeat="starship in starshiptravelCtrl.starshipModel.starships">
-                            <td>{{starship.name}}</td>
+                            <td>
+                                <div>{{starship.name}}</div>
+                                <div><button class="btn-xs btn-info pull-right" ng-click="starshiptravelCtrl.OpenStarshipModel(starship)">Details</button></div>
+                            </td>
                             <td>{{starship.crew}}</td>
                             <td>{{starship.consumables}}</td>
                             <td>{{starship.MGLT}}</td>
                             <td>{{starship.ReSupplyCount}}</td>
-                            <th>{{starshiptravelCtrl.planetDistance}}</th>
+                            <td>{{starshiptravelCtrl.planetDistance}}</td>
                         </tr>
                         <tr ng-if="!starshiptravelCtrl.starshipModel.starships"><td colspan="6">No starships found.</td></tr>
                     </tbody>
@@ -39,9 +42,64 @@
                             </td>
                         </tr>
                     </tfoot>
-
                 </table>
             </div>
+            <script type="text/ng-template" id="starshipModal.html">
+                <div class="modal-header">
+                    <h3 class="modal-title">Starship Details</h3>
+                </div>
+                <div class="modal-body">
+                    <table summary="Starship Details" class="table table-bordered table-hover">
+                        <tbody>
+                            <tr>
+                                <td>Name</td>
+                                <td>{{popup.selectedItem.name}}</td>
+                                <td>Model</td>
+                                <td>{{popup.selectedItem.model}}</td>
+                            </tr>
+                            <tr>
+                                <td>Manufacturer</td>
+                                <td>{{popup.selectedItem.manufacturer}}</td>
+                                <td>Cost In Credits</td>
+                                <td>{{popup.selectedItem.cost_in_credits}}</td>
+                            </tr>
+                            <tr>
+                                <td>Ship Length</td>
+                                <td>{{popup.selectedItem.length}}</td>
+                                <td>Max Atmosphering Speed</td>
+                                <td>{{popup.selectedItem.max_atmosphering_speed}}</td>
+                            </tr>
+                            <tr>
+                                <td>Crew</td>
+                                <td>{{popup.selectedItem.crew}}</td>
+                                <td>Passengers</td>
+                                <td>{{popup.selectedItem.passengers}}</td>
+                            </tr>
+                            <tr>
+                                <td>Cargo Capacity</td>
+                                <td>{{popup.selectedItem.cargo_capacity}}</td>
+                                <td>Consumables</td>
+                                <td>{{popup.selectedItem.consumables}}</td>
+                            </tr>
+                            <tr>
+                                <td>Hyperdrive Rating</td>
+                                <td>{{popup.selectedItem.hyperdrive_rating}}</td>
+                                <td>Starship Class</td>
+                                <td>{{popup.selectedItem.starship_class}}</td>
+                            </tr>
+                            <tr>
+                                <td>ReSupplyCount</td>
+                                <td>{{popup.selectedItem.ReSupplyCount}}</td>
+                                <td>MGLT</td>
+                                <td>{{popup.selectedItem.MGLT}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-warning" type="button" ng-click="popup.Close()">Close</button>
+                </div>
+            </script>
         </div>
     </div>
 </div>
