--- a/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/Scripts/App/AdminSection/Views/planets.html
+++ b/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/Scripts/App/AdminSection/Views/planets.html
@@ -37,7 +37,7 @@
                                 <button class="btn btn-md btn-default pull-right" ng-disabled="!planetCtrl.model.next" ng-click="planetCtrl.GetByUrl(planetCtrl.model.next)">Next</button>
                             </td>
                             <td class="text-right">
-                                <button class="btn btn-md btn-info" ng-click="alert('not implemented')">Add New Planet</button>
+                                <button class="btn btn-md btn-info" ng-click="planetCtrl.InfoMessage()">Add New Planet</button>
                             </td>
                         </tr>
                     </tfoot>
