--- a/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/Scripts/App/AdminSection/Views/starships.html
+++ b/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/Scripts/App/AdminSection/Views/starships.html
@@ -43,7 +43,7 @@
                                 <button class="btn btn-md btn-default pull-right" ng-disabled="!starshipCtrl.model.next" ng-click="starshipCtrl.GetByUrl(starshipCtrl.model.next)">Next</button>
                             </td>
                             <td class="text-right">
-                                <button class="btn btn-md btn-info" ng-click="alert('not implemented')">Add New Starship</button>
+                                <button class="btn btn-md btn-info" ng-click="starshipCtrl.InfoMessage()">Add New Starship</button>
                             </td>
                         </tr>
                     </tfoot>
